--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^2.4.1
   flutter:
     sdk: flutter
+  google_sign_in: ^5.4.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
