--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.3.1
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
   flutter:
     sdk: flutter
