--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter:
     sdk: flutter
   google_sign_in: ^5.4.4
+  image_picker: ^0.8.6+1
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
