--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^5.4.4
   image_picker: ^0.8.6+1
   path: ^1.8.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
