app name and icon added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.fitness_app">
    <application
-        android:label="fitness_app"
+        android:label="BeFit"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
